login logout register

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -133,7 +133,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="qlt" class="form-label">Qualitas : </label>
+                        <label for="qlt" class="form-label">Kualitas : </label>
                         <select name="qlt" id="qlt" class="form-select">
                             <option value="premium">Premium</option>
                             <option value="medium">Medium</option>
@@ -328,6 +328,7 @@
 
             <div class="section-title">
                 <h2>Profile</h2>
+                <a href="{% url 'account_logout' %}" class="btn btn-outline-danger">Log Out</a>
             </div>
 
             <!--<div class="row">
