--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,17 +5,26 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+<div class="container">
+    <div class="card mb-3">
+        <div class="card-header text-center">
+            <h5>Sign Out</h5>
+        </div>
+        <div class="card-body">
+            <form method="post" action="{% url 'account_logout' %}">
+                {% csrf_token %}
+                <p>{% trans 'Are you sure you want to sign out?' %}</p>
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
+                </div>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                {% endif %}
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
