--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,17 +5,32 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="container">
+    <div class="card">
+        <div class="card-header text-center">
+            <h5>Register</h5>
+        </div>
+        <div class="card-body">
+            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                {% csrf_token %}
+                {% load crispy_forms_tags %}
+                {{ form | crispy }}
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-primary">{% trans "Sign Up" %}</button>
+                </div>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                {% endif %}
+
+                <div class="text-center mt-3">
+                    <p>Already have an account? <a href="{{ login_url }}">Login</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 
 {% endblock %}
