--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -465,7 +465,7 @@
 						<h2>Diagram</h2>
 					</div>
 
-					<div class="col-xl-6">
+					<div class="col-xl-6" style="overflow-x: scroll">
 						<form action="">
 							<select id="diagram-year-chooser-input">
 								<option selected disabled>--Pilihan Tahun--</option>
@@ -475,7 +475,7 @@
 							</select>
 						</form>
 						<br />
-						<h2 id="year-column" colspan="13">Prediksi tahun 2023</h2>
+						<h2 id="year-column" colspan="13">Prediksi Tahun 2023</h2>
 						<!-- Bar Chart -->
 						<canvas id="ricePriceChart"></canvas>
 
@@ -527,7 +527,7 @@
 								},
 							})
 						</script> -->
-					</div>
+					</div sty styk>
 				</div>
 			</section>
 			<!-- End Services Section -->
