--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -475,7 +475,7 @@
 							</select>
 						</form>
 						<br />
-						<h2 id="year-column" colspan="13">Prediksi Tahun 2023</h2>
+						<h2 id="year-column" colspan="13">Prediksi Tahun</h2>
 						<!-- Bar Chart -->
 						<canvas id="ricePriceChart"></canvas>
 
